manifests/management-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: management-api-service
spec:
  type: ClusterIP
  selector:
    app: management-api
  ports:
  - port: 80
