manifests/management-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/Doctor/getAllDoctor
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Doctor/byId/?p*
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Doctor/GetByEmail/?p*
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Doctor/addDoctor
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Doctor/deleteDoctor/?p*
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Nurse/getAllNurse
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Nurse/AddNurse
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
      - path: /api/Nurse/getByEmail/?p*
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 80
